--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 @font-face {
   font-family: 'GangsterGrotesk';
-  src: url('fonts/gangstergrotesk-regular.woff') format('woff'), url('fonts/gangstergrotesk-regular.ttf') format('truetype')
+  src: url('gangstergrotesk-regular.woff') format('woff'), url('fonts/gangstergrotesk-regular.ttf') format('truetype')
 }
 
 html {
